--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
-			Vitailse | Opinionated vite starter template with TailwindCSS
+			Ginnidevi Satyanarayan Shekhsaria Girls (PG) College, Chirawa
 		</title>
 
 		<meta
 			name="description"
-			content="Opinionated vite starter template with TailwindCSS"
+			content="Best Girls PG College in chirawa"
 		/>
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="icon" href="/favicon.png" type="image/png" />
